Build mobile hero section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
   <body>
+    <main>
+      <div class="hero-section">
+        <img
+          class="hero__img"
+          src="images/image-hero-mobile.png"
+          alt="User using product"
+        />
+        <div class="hero-content">
+          <h1>Make remote work</h1>
+          <p class="hero__text">
+            Get your team in sync, no matter your location. Streamline
+            processes, create team rituals, and watch productivity soar.
+          </p>
+          <a href="#" class="modified-link btn btn--dark">Learn more</a>
+          <div class="client-group">
+            <img src="images/client-databiz.svg" alt="Databiz" />
+            <img src="images/client-audiophile.svg" alt="Audiophile" />
+            <img src="images/client-meet.svg" alt="Meet" />
+            <img src="images/client-maker.svg" alt="Maker" />
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
