Build desktop version of hero section

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   </head>
   <body>
     <main>
-      <div class="hero-section">
+      <div class="hero-section container">
         <img
           class="hero__img"
-          src="images/image-hero-mobile.png"
+          src="images/image-hero-desktop.png"
           alt="User using product"
         />
         <div class="hero-content">
-          <h1>Make remote work</h1>
+          <h1 class="hero__heading">Make remote work</h1>
           <p class="hero__text">
             Get your team in sync, no matter your location. Streamline
             processes, create team rituals, and watch productivity soar.
