Refactor code for hero content

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
           alt="User using product"
         />
         <div class="hero-content">
-          <h1 class="hero__heading">Make remote work</h1>
-          <p class="hero__text">
-            Get your team in sync, no matter your location. Streamline
-            processes, create team rituals, and watch productivity soar.
-          </p>
-          <a href="#" class="modified-link btn btn--dark">Learn more</a>
+          <div>
+            <h1 class="hero__heading">Make remote work</h1>
+            <p class="hero__text">
+              Get your team in sync, no matter your location. Streamline
+              processes, create team rituals, and watch productivity soar.
+            </p>
+            <a href="#" class="modified-link btn btn--dark">Learn more</a>
+          </div>
           <div class="client-group">
             <img src="images/client-databiz.svg" alt="Databiz" />
             <img src="images/client-audiophile.svg" alt="Audiophile" />
