--- a/index.html
+++ b/index.html
@@ -105,10 +105,16 @@
     </main>
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        class="link--modified"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
         >Frontend Mentor</a
       >. Coded by
-      <a href="https://charmainelhm.netlify.app/" target="_blank"
+      <a
+        class="link--modified"
+        href="https://charmainelhm.netlify.app/"
+        target="_blank"
         >Charmaine Lee</a
       >.
     </footer>
